--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js",
-      "test": "jest"
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "dotenv": "^16.0.1",
-      "express": "^4.18.1"
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1"
     },
     "devDependencies": {
-      "jest": "^28.1.1",
-      "nodemon": "^2.0.16",
-      "supertest": "^6.2.3"
+        "jest": "^28.1.1",
+        "nodemon": "^2.0.16",
+        "supertest": "^6.2.3"
     }
-  }
+}
